# Modelsen

./: .dockerignore  .gitignore  Dockerfile  README.md  buildspec.yml  cloudbuild.yaml  pyproject.toml
.github/workflows/: cloud-build.yml
configs/: irisen-char-labeled-10m-small.json  irisen-char-labeled-10m.json  irisen-char-labeled.json  irisen-local-build.json  irisen-tiny.json
data/: tiny_korean.txt
data/cloud_smoke/: eval_prompts.jsonl  irisen_train.txt  irisen_val.txt  manifest.json
data/labeled/: labeled_train.jsonl  labeled_train.txt  labeled_val.jsonl  labeled_val.txt  manifest.json
data/labeled_10m/: labeled_val.jsonl  labeled_val.txt  manifest.json
data/labeled_response_10m/: labeled_val.jsonl  labeled_val.txt  manifest.json
docs/: architecture.md  cloud-build.md
irisen_model/: __init__.py  __main__.py  config.py  configs.py  generate.py  model.py  tokenizer.py  train.py
irisen_model/checkpoints/: __init__.py  io.py
irisen_model/cli/: build_corpus.py  build_labeled_corpus.py  evaluate.py  generate.py  train.py
irisen_model/data/: __init__.py  labeled_corpus.py  synthetic_corpus.py  text_dataset.py
irisen_model/generation/: __init__.py  sampling.py
irisen_model/modeling/: __init__.py  configuration_irisen.py  modeling_irisen.py  modules.py
scripts/: build_corpus.py  build_labeled_corpus.py  evaluate.py  generate.py  train.py
tests/: test_char_tokenizer.py  test_checkpoint_and_serving.py  test_data.py  test_generate_cli.py  test_generation_sampling.py  test_labeled_corpus.py  test_model.py  test_synthetic_corpus.py  test_tokenizer.py
(+11 files in other folders)
